# esp32-wifi-manager

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Kconfig  LICENSE.md  Makefile  README.md  clang_format_all.sh  component.mk  embed_files.txt  gen_rom_files.py  sonar_scanner-esp32-wifi-manager.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
example/: Makefile
example/main/: CMakeLists.txt  component.mk
examples/default_demo/: CMakeLists.txt  Makefile  sdkconfig.defaults
examples/default_demo/main/: component.mk  idf_component.yml  user_main.c
examples/http_hook/main/: idf_component.yml  user_main.c
scripts/: clang_format_all.sh  clang_format_all_check.sh  run-clang-format.sh
src/: access_points_list.c  access_points_list.h  ap.json  ap_mac.h  ap_ssid.c  ap_ssid.h  code.js  compress.bat  dns_server.c  dns_server.h  http_app.c  http_app.h  http_req.c  http_req.h  http_server.c  http_server.h  http_server_accept_and_handle_conn.c  http_server_accept_and_handle_conn.h  http_server_auth.c  http_server_auth.h  http_server_auth_common.h  http_server_auth_digest.c  http_server_auth_digest.h  http_server_auth_ruuvi.c  http_server_auth_ruuvi.h  http_server_ecdh.c  http_server_ecdh.h  http_server_handle_req.c  http_server_handle_req.h  http_server_handle_req_delete_auth.c  http_server_handle_req_delete_auth.h  http_server_handle_req_get_auth.c  http_server_handle_req_get_auth.h  http_server_handle_req_post_auth.c  http_server_handle_req_post_auth.h  http_server_resp.c  index.html  json.c  json.h  json_access_points.c  (+33 more)
src/include/: http_server.h  http_server_auth_type.h  http_server_resp.h  sta_ip.h  wifi_manager.h  wifi_manager_defs.h
src/web/: style.css
tests/: CMakeLists.txt
tests/esp_simul/: CMakeLists.txt  sdkconfig.h  stub_func.c
tests/esp_simul/arch/: cc.h
tests/lwip/: CMakeLists.txt
tests/lwip/extra/: lwipopts.h  tapif.c
tests/lwip/extra/lwip/: sys.h
tests/test_access_points_list/: CMakeLists.txt  test_access_points_list.cpp
tests/test_ap_ssid/: CMakeLists.txt  test_ap_ssid.cpp
tests/test_http_req/: CMakeLists.txt  test_http_req.cpp
tests/test_http_server_handle_req_get_auth/: CMakeLists.txt  test_http_server_handle_req_get_auth.cpp
tests/test_http_server_resp/: CMakeLists.txt  test_http_server_resp.cpp
tests/test_http_server_resp/include/: esp_system.h
tests/test_json/: CMakeLists.txt  test_json.cpp
tests/test_json_access_points/: CMakeLists.txt  test_json_access_points.cpp
tests/test_json_access_points/include/: esp_err.h  esp_event_base.h  esp_wifi_types.h
tests/test_json_network_info/: CMakeLists.txt  test_json_network_info.cpp
tests/test_sta_ip_safe/: CMakeLists.txt  TQueue.hpp  esp_log_wrapper.cpp  esp_log_wrapper.hpp  test_sta_ip_safe.cpp
tests/test_sta_ip_safe/include/: esp_eth_mac.h  esp_event_legacy.h  esp_log.h  esp_netif.h  esp_netif_defaults.h  esp_netif_ip_addr.h  esp_netif_ppp.h  esp_netif_private.h  esp_netif_slip.h
tests/test_sta_ip_safe/include/esp_private/: wifi_types.h
tests/test_sta_ip_unsafe/: CMakeLists.txt  esp_netif_lwip.c  sdkconfig.h  test_sta_ip_unsafe.cpp
tests/test_sta_ip_unsafe/include/: esp_compiler.h  esp_eth.h  esp_eth_com.h  esp_eth_netif_glue.h  esp_eth_phy.h  esp_event.h  esp_event_base.h  esp_interface.h  esp_netif_types.h  esp_wifi_types.h  lwip_default_hooks.h
tests/test_sta_ip_unsafe/include/esp_private/: esp_wifi_private.h  wifi.h  wifi_os_adapter.h
tests/test_str_buf/: CMakeLists.txt  test_str_buf.cpp
tests/test_stub/: CMakeLists.txt  test_1.cpp
wifi_manager/: .cproject  .project  CMakeLists.txt  Kconfig  Makefile  component.mk  sdkconfig  sdkconfig.old
wifi_manager/main/: CMakeLists.txt  Kconfig.projbuild  code.js  component.mk  dns_server.c  dns_server.h  http_server.c  http_server.h  index.html  json.c  json.h  main.c  status  style.css  wifi_manager.c  wifi_manager.h
