if(IDF_VERSION_MAJOR GREATER_EQUAL 4)
    idf_component_register(
        SRCS
            src/include/wifi_manager.h
            src/include/wifi_manager_defs.h
            src/include/http_server.h
            src/include/http_server_auth_type.h
            src/include/http_server_resp.h
            src/include/sta_ip.h
            src/access_points_list.c
            src/access_points_list.h
            src/ap_ssid.c
            src/ap_ssid.h
            src/dns_server.c
            src/json.c
            src/json.h
            src/json_access_points.c
            src/json_access_points.h
            src/json_network_info.c
            src/json_network_info.h
            src/http_req.c
            src/http_req.h
            src/http_server.c
            src/http_server_auth.c
            src/http_server_auth.h
            src/http_server_auth_common.h
            src/http_server_auth_digest.c
            src/http_server_auth_digest.h
            src/http_server_auth_ruuvi.c
            src/http_server_auth_ruuvi.h
            src/http_server_handle_req.c
            src/http_server_handle_req.h
            src/http_server_handle_req_delete_auth.c
            src/http_server_handle_req_delete_auth.h
            src/http_server_handle_req_get_auth.c
            src/http_server_handle_req_get_auth.h
            src/http_server_handle_req_post_auth.c
            src/http_server_handle_req_post_auth.h
            src/http_server_resp.c
            src/sta_ip_safe.c
            src/sta_ip_safe.h
            src/sta_ip_unsafe.c
            src/sta_ip_unsafe.h
            src/wifi_manager.c
            src/wifi_sta_config.c
            src/wifi_sta_config.h
            src/wifiman_msg.c
            src/wifiman_msg.h
            src/wifiman_md5.c
            src/include/wifiman_md5.h
            src/wifiman_sha256.c
            src/wifiman_sha256.h
        REQUIRES
            log
            nvs_flash
            mdns
            wpa_supplicant
            lwip
            esp_http_server
            json
            ruuvi.esp_wrappers.c
        INCLUDE_DIRS
            src/include
        PRIV_INCLUDE_DIRS
            ../ruuvi.esp_wrappers.c/include
        )
else()
    set(COMPONENT_SRCDIRS src)
    set(COMPONENT_ADD_INCLUDEDIRS src)
    set(COMPONENT_REQUIRES log nvs_flash mdns wpa_supplicant lwip esp_http_server json)
    register_component()
endif()
